--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,6 +109,7 @@ ul li a:hover {
   display: flex;
   flex-direction: row;
   gap: 10px;
+justify-content: center;
 }
 
 .wave {
@@ -126,6 +127,10 @@ ul li a:hover {
   font-family: 'Kaisei Decol', serif;
   font-weight: bold;
   font-size: 50px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+justify-content: center;
 
 }
 
@@ -194,7 +199,7 @@ ul li a:hover {
 .capability11 {
   height: 57px;
   width: 62px;
-  background-color: #D9D9D9;
+  background-color: #F7F0F0;
   margin-top: 10px;
 }
 
@@ -208,7 +213,7 @@ ul li a:hover {
 .capability22 {
   height: 57px;
   width: 62px;
-  background-color: #D9D9D9;
+  background-color: #F7F0F0;
   margin-top: 10px;
 }
 
@@ -222,7 +227,7 @@ ul li a:hover {
 .capability33 {
   height: 57px;
   width: 62px;
-  background-color: #D9D9D9;
+  background-color: #F7F0F0;
   margin-top: 10px;
 }
 
@@ -236,21 +241,21 @@ ul li a:hover {
 .capability44 {
   height: 57px;
   width: 62px;
-  background-color: #D9D9D9;
+  background-color: #F7F0F0;
   margin-top: 10px;
 }
 
 .capability5 {
   height: 57px;
   width: 62px;
-  background-color: #D9D9D9;
+  background-color: #F7F0F0;
   margin-top: 10px;
 }
 
 .capability55 {
   height: 57px;
   width: 62px;
-  background-color: #D9D9D9;
+  background-color: #F7F0F0;
   margin-top: 10px;
 }
 
@@ -282,10 +287,9 @@ width: 280px;
   height: 300px;
   background-color: #797BAE;
 }
-.fill {
-  width: 50px;
-  height: 10px;
-}
+
+
+
 
 .project-container-1 {
   display: flex;
@@ -333,7 +337,12 @@ width: 280px;
 
 .fill {
   width: 50px;
-  height: 115px;
+  height: 105px;
+}
+
+.fill-2 {
+  width: 50px;
+  height: 50px;
 }
 
 .fill2 {
