--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,10 @@
 
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 @font-face {
   font-family: Noyh;
   src: url(NoyhGeometricSemiLight.otf);
@@ -95,13 +99,13 @@ ul li a:hover {
 .universefill1 {
 
   width: 10%;
-  height: 3000px;
+  height: 3200px;
 }
 
 .universefill2 {
 
   width: 80%;
-  height: 3000px;
+  height: 3200px;
 }
 
 
@@ -137,7 +141,7 @@ justify-content: center;
 .universefill3 {
 
   width: 10%;
-  height: 3000px;
+  height: 3200px;
 }
 
 .projects {
@@ -259,7 +263,13 @@ justify-content: center;
   margin-top: 10px;
 }
 
-
+.bio-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 200px;
+  gap: 25px;
+}
 .bio-header {
   font-size: 50px;
   color: #696969;
@@ -272,6 +282,7 @@ justify-content: center;
 .bio-alt {
 display: flex;
 flex-direction: row;
+gap: 50px;
 }
 
 .bio-text {
@@ -284,10 +295,15 @@ color: #696969;
 
 .bio-picture {
 width: 280px;
-  height: 300px;
+  height: 280px;
   background-color: #797BAE;
 }
-
+.bio-picture-class {
+  width: 100%;      /* Makes the image take up the full width of the div */
+  height: auto;     /* Maintains the aspect ratio of the image */
+  object-fit: cover; /* Ensures the image covers the div, cropping if necessary */
+  display: block;   /* Removes any extra spacing around the image */
+}
 
 
 
