--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,7 @@ html {
   scroll-behavior: smooth;
 }
 
+
 @font-face {
   font-family: Noyh;
   src: url(NoyhGeometricSemiLight.otf);
@@ -33,30 +34,22 @@ header {
   flex-direction: row;
   height: 100px;
   display: flex;
-
+justify-content: center;
 }
 
-.headerfill1 {
-  width: 25%;
-  height: 100%;
-  background-color: #F7F0F0;
-}
+
 
 nav {
   width: 50%;
   height: 100%;
-  background-color: F7F0F0;
+  background-color: #F7F0F0;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: bold;
 }
 
-.headerfill3 {
-  width: 25%;
-  height: 100%;
-  background-color: #F7F0F0;
-}
+
 
 ul {
   list-style-type: none;
@@ -91,21 +84,17 @@ ul li a:hover {
 
 
 .universe {
-
+justify-content: center;
   display: flex;
   flex-direction: row;
 }
 
-.universefill1 {
 
-  width: 10%;
-  height: 3200px;
-}
 
 .universefill2 {
 
   width: 80%;
-  height: 3200px;
+  height: 2200px;
 }
 
 
@@ -113,7 +102,11 @@ ul li a:hover {
   display: flex;
   flex-direction: row;
   gap: 10px;
-justify-content: center;
+  justify-content: center;
+}
+
+.introduction-section {
+  margin: 250px;
 }
 
 .wave {
@@ -134,15 +127,11 @@ justify-content: center;
   display: flex;
   flex-direction: row;
   gap: 10px;
-justify-content: center;
+  justify-content: center;
 
 }
 
-.universefill3 {
 
-  width: 10%;
-  height: 3200px;
-}
 
 .projects {
   font-size: 50px;
@@ -151,6 +140,12 @@ justify-content: center;
   justify-content: center;
   display: flex;
   font-size: 30px;
+  margin: 50px;
+}
+
+.projects-section {
+
+  margin: 100px;
 }
 
 .capabilities {
@@ -160,6 +155,7 @@ justify-content: center;
   justify-content: center;
   display: flex;
   font-size: 30px;
+
 }
 
 .capabilities-container {
@@ -170,13 +166,14 @@ justify-content: center;
 
 .capability-tekst-container {
   display: flex;
-  flex-direction: column; 
-  justify-content: center; 
-  align-items: center; 
-  text-align: center; 
-  gap: 5px; 
-  height: 100%; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 5px;
+  height: 100%;
 }
+
 .capability1 {
   height: 57px;
   width: 62px;
@@ -188,13 +185,14 @@ justify-content: center;
   object-fit: cover;
   height: 57px;
   width: 62px;
- 
+
 }
+
 .capability1-tekst {
 
-    text-align: center;
-    font-family: 'Itim', cursive;
-    color: #696969;
+  text-align: center;
+  font-family: 'Itim', cursive;
+  color: #696969;
 
 
 
@@ -225,7 +223,7 @@ justify-content: center;
 .capability3 {
   height: 57px;
   width: 62px;
-  background-color:#F7F0F0;
+  background-color: #F7F0F0;
 }
 
 .capability33 {
@@ -263,6 +261,11 @@ justify-content: center;
   margin-top: 10px;
 }
 
+.bio-section {
+
+  margin: 150px;
+}
+
 .bio-container {
   display: flex;
   flex-direction: column;
@@ -270,6 +273,7 @@ justify-content: center;
   margin-left: 200px;
   gap: 25px;
 }
+
 .bio-header {
   font-size: 50px;
   color: #696969;
@@ -280,29 +284,34 @@ justify-content: center;
 }
 
 .bio-alt {
-display: flex;
-flex-direction: row;
-gap: 50px;
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
 }
 
 .bio-text {
   font-family: 'Itim', cursive;
-font-weight:lighter;
-font-size: 27px;
-color: #696969;
+  font-weight: lighter;
+  font-size: 27px;
+  color: #696969;
 
 }
 
 .bio-picture {
-width: 280px;
+  width: 280px;
   height: 280px;
   background-color: #797BAE;
 }
+
 .bio-picture-class {
-  width: 100%;      /* Makes the image take up the full width of the div */
-  height: auto;     /* Maintains the aspect ratio of the image */
-  object-fit: cover; /* Ensures the image covers the div, cropping if necessary */
-  display: block;   /* Removes any extra spacing around the image */
+  width: 100%;
+  /* Makes the image take up the full width of the div */
+  height: auto;
+  /* Maintains the aspect ratio of the image */
+  object-fit: cover;
+  /* Ensures the image covers the div, cropping if necessary */
+  display: block;
+  /* Removes any extra spacing around the image */
 }
 
 
@@ -320,11 +329,11 @@ width: 280px;
   height: 286px;
   object-fit: cover;
   transition: filter 0.4s ease, transform 0.3s ease;
- 
+
 }
 
 .bed:hover {
-  filter: blur(5px); /
+  filter: blur(5px);
 }
 
 .project-window-1 {
@@ -351,20 +360,7 @@ width: 280px;
   background-color: #9FA1CD;
 }
 
-.fill {
-  width: 50px;
-  height: 105px;
-}
 
-.fill-2 {
-  width: 50px;
-  height: 50px;
-}
-
-.fill2 {
-  width: 50px;
-  height: 115px;
-}
 
 .project-container-2 {
   display: flex;
@@ -403,14 +399,14 @@ footer {
   background-color: #4F517D;
   width: 50%;
   height: 100%;
- 
+
 }
 
 .footer-fill-2-trademark {
   display: flex;
   align-items: center;
-  justify-content: center; 
-  height: 100%; 
+  justify-content: center;
+  height: 100%;
   text-align: center;
   font-family: 'Itim', cursive;
   color: #FFFFFF;
@@ -422,9 +418,10 @@ footer {
   width: 25%;
   height: 100%;
   display: flex;
-  justify-content: center; 
-  align-items: center;     /* Vertical centering */
- 
+  justify-content: center;
+  align-items: center;
+  /* Vertical centering */
+
 }
 
 .afbeelding-container {
